--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^18",
+    "@types/react-devtools": "^3.6.2",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
+    "code-inspector-plugin": "^1.3.4",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
